--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Hemen doaz PLC-ren aldagaiak -->
   <!-- AWP_In_Variable Name='"BOTOIA"' -->
   <!-- AWP_In_Variable Name='"KonfigurazioOrokorra".t1ON' -->
   <title>Zure orrialdea</title>
